# humpback-whale

./: .gitignore  README.md  eval.py  pyproject.toml  train.py
annotations/: bounding_boxes.csv  test.csv  test_nw.csv  train.csv  valid.csv  valid_nw.csv
notebooks/: new-whales-threshold.ipynb  plots.ipynb
src/humpback/: dataset.py  loss.py  metrics.py  models.py  transforms.py  utils.py
