[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "humpback"
version = "0.0.0"
authors = [
  { name="Lemuel Puglisi", email="lemuelpuglisi001@gmail.com" },
]
description = "Solution to the Kaggle Humpback Whale Identification challenge"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "pandas",
  "torch",
  "torchvision",
  "faiss",
  "tqdm"
]

[options]
package_dir = "src"

[options.packages.find]
where="src"